# RecNetBotV2

./: .gitignore  .replit  README.md  cached_rinfo.json  commands.bash  cringe_bios.json  cringe_word_list.json  functions.py  items.json  keep_alive.py  main.py  minibot-config.json  pyproject.toml  randombio_list.json  temp_txt.txt
Economy/: badges.json  beg_fail.json  challenges.json  inventories.json  player_data.json
Economy/activities/: paintball.json
Economy/cosmetics/: 2star.json  paintball.json
Economy/items/: boxes.json  cake.json  donuts.json  drinks.json  film.json  ko.json  other.json  pizza.json  potions.json  tokens.json
cogs/: admin.py  api.py  beta.py  cv2.py  economy.py  fun.py  help.py  legacy.py  other.py  random.py  search.py  test.py  utility.py
items/: donuts.json  drinks.json  ko.json
