[tool.poetry]
name = "recnetbotv2"
version = "0.1.0"
description = "RNBV2"
authors = ["Jesse"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
discord = "^1.0.1"
arrow = "^0.17.0"
replit = "^2.0.0"
cryptography = "^3.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
